Endpoint Usuario Terminado
