# routes/web.php
@@ -22,6 +22,8 @@ Route::get('/api/usuarios', 'App\Http\Controllers\UsuarioController@index');
 Route::get('/api/usuarios/{dni}', 'App\Http\Controllers\UsuarioController@show');
 Route::post('/api/usuarios/guardar', 'App\Http\Controllers\UsuarioController@store');
 Route::put('/api/usuarios/actualizar/{dni}', 'App\Http\Controllers\UsuarioController@update');
+Route::put('/api/usuarios/actualizar/datos/{dni}', 'App\Http\Controllers\UsuarioController@updateDatos');
+Route::put('/api/usuarios/actualizar/password/{dni}', 'App\Http\Controllers\UsuarioController@updatePassword');
 Route::delete('/api/usuarios/eliminar/{dni}', 'App\Http\Controllers\UsuarioController@destroy');
 
 // Aulas
